--- a/closedverse_main/templates/closedverse_main/layout.html
+++ b/closedverse_main/templates/closedverse_main/layout.html
@@ -87,11 +87,10 @@
       <div id="footer">
         <div id="footer-inner">
           <div class="link-container">
-			<p><a href="https://paypal.me/closedverse">Donate</a></p>
+			<p><a href="https://github.com/ariankordi/closedverse">GitHub Repository</a></p>
 			<p><a href="/help/contact">Contact</a></p>
-			<p><a href="https://github.com/ariankordi/closedverse">GitHub</a></p>
-			<p id="copyright"><a href="https://nintendo.com/">Inspired by Hatena Co, Ltd/Nintendo's Miiverse. I don't nor wish to make money from this. Please support them as they deserve your business.</a><br>
-			<a href="https://foxverse.xyz/">Hosted by Foxverse: please give these guys respect!</a></p>
+			<div>This project is not associated with Nintendo or Hatena Co., Ltd.</div>
+			<p><a href="{% get_git_url %}">closedverse version {% get_git_version %}</a></div>
 			</div>
         </div>
       </div>
