--- a/closedverse_main/templates/closedverse_main/man/users.html
+++ b/closedverse_main/templates/closedverse_main/man/users.html
@@ -5,7 +5,7 @@
 <div class="post-list-outline">
     <h2 class="label">Manage users</h2>
 	<div class="user-loads">
-		{% discordapp_spinner %}
+		{% loading_spinner %}
 		<br>
 	</div>
         
