--- a/closedverse_main/templates/closedverse_main/elements/community_post.html
+++ b/closedverse_main/templates/closedverse_main/elements/community_post.html
@@ -63,7 +63,7 @@
 {% endif %}
   <div id="{{ post.recent_comment.unique_id }}" tabindex="0" class="recent-reply trigger">
     {% user_icon_container post.recent_comment.creator post.recent_comment.feeling %}
-    <p class="user-name"><a href="{% url "main:user-view" post.recent_comment.creator.username %}">{{ post.recent_comment.creator.nickname }}</a></p>
+    <p class="user-name"><a href="{% url "main:user-view" post.recent_comment.creator.username %}"{% if post.recent_comment.creator.color %}style=color:{{ post.recent_comment.creator.color }}{% endif %}>{{ post.recent_comment.creator.nickname }}</a></p>
     <p class="timestamp-container">
         <a class="timestamp" href="{% url "main:comment-view" post.recent_comment.id %}">{% time post.recent_comment.created %}</a>
     </p>
